Sources/StubsParser/StubsParser.swift
// Generated from StubsParser.g4 by ANTLR 4.7.1
import Antlr4

open class StubsParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = StubsParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(StubsParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, Ws = 1, Newline = 2, MultilineComment = 3, SingleLineComment = 4, 
                 IntegerLiteral = 5, DoubleLiteral = 6, StringLiteral = 7, 
                 BooleanLiteral = 8, Array = 9, Var = 10, NativeType = 11, 
                 If = 12, Else = 13, While = 14, Def = 15, Return = 16, 
                 Object = 17, Plus = 18, Minus = 19, Mult = 20, Divide = 21, 
                 Modulo = 22, Equal = 23, Less = 24, Greater = 25, LessOrEqual = 26, 
                 GreaterOrEqual = 27, NotEqual = 28, And = 29, Or = 30, 
                 Not = 31, Assign = 32, ParenOpen = 33, ParenClose = 34, 
                 BracketOpen = 35, BracketClose = 36, CurlyBracketOpen = 37, 
                 CurlyBracketClose = 38, Seperator = 39, Colon = 40, Semicolon = 41, 
                 Identifier = 42
	}

	public
	static let RULE_program = 0, RULE_objectDeclaration = 1, RULE_objectBody = 2, 
            RULE_objectIdentifier = 3, RULE_datatype = 4, RULE_variableDeclaration = 5, 
            RULE_variableAssignment = 6, RULE_variableIdentifier = 7, RULE_functionDeclaration = 8, 
            RULE_functionDeclarationArgumentList = 9, RULE_functionBody = 10, 
            RULE_functionCall = 11, RULE_functionIdentifier = 12, RULE_statement = 13, 
            RULE_blockStatement = 14, RULE_ifStatement = 15, RULE_whileStatement = 16, 
            RULE_returnStatement = 17, RULE_expression = 18, RULE_orExpression = 19, 
            RULE_andExpression = 20, RULE_equalExpression = 21, RULE_relationalExpression = 22, 
            RULE_additiveExpression = 23, RULE_multiplicativeExpression = 24, 
            RULE_unaryExpression = 25, RULE_primaryExpression = 26, RULE_literal = 27, 
            RULE_primitive = 28, RULE_array = 29

	public
	static let ruleNames: [String] = [
		"program", "objectDeclaration", "objectBody", "objectIdentifier", "datatype", 
		"variableDeclaration", "variableAssignment", "variableIdentifier", "functionDeclaration", 
		"functionDeclarationArgumentList", "functionBody", "functionCall", "functionIdentifier", 
		"statement", "blockStatement", "ifStatement", "whileStatement", "returnStatement", 
		"expression", "orExpression", "andExpression", "equalExpression", "relationalExpression", 
		"additiveExpression", "multiplicativeExpression", "unaryExpression", "primaryExpression", 
		"literal", "primitive", "array"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, nil, nil, nil, nil, nil, nil, nil, nil, "'Array'", "'var'", nil, 
		"'if'", "'else'", "'while'", "'def'", "'return'", "'object'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'=='", "'<'", "'>'", "'<='", "'>='", "'!='", "'&&'", 
		"'||'", "'!'", "'='", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", 
		"':'", "';'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "Ws", "Newline", "MultilineComment", "SingleLineComment", "IntegerLiteral", 
		"DoubleLiteral", "StringLiteral", "BooleanLiteral", "Array", "Var", "NativeType", 
		"If", "Else", "While", "Def", "Return", "Object", "Plus", "Minus", "Mult", 
		"Divide", "Modulo", "Equal", "Less", "Greater", "LessOrEqual", "GreaterOrEqual", 
		"NotEqual", "And", "Or", "Not", "Assign", "ParenOpen", "ParenClose", "BracketOpen", 
		"BracketClose", "CurlyBracketOpen", "CurlyBracketClose", "Seperator", 
		"Colon", "Semicolon", "Identifier"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "StubsParser.g4" }

	override open
	func getRuleNames() -> [String] { return StubsParser.ruleNames }

	override open
	func getSerializedATN() -> String { return StubsParser._serializedATN }

	override open
	func getATN() -> ATN { return StubsParser._ATN }

	override open
	func getVocabulary() -> Vocabulary {
	    return StubsParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,StubsParser._ATN,StubsParser._decisionToDFA, StubsParser._sharedContextCache)
	}

	public class ProgramContext: ParserRuleContext {
			open
			func EOF() -> TerminalNode? {
				return getToken(StubsParser.Tokens.EOF.rawValue, 0)
			}
			open
			func objectDeclaration() -> ObjectDeclarationContext? {
				return getRuleContext(ObjectDeclarationContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StubsParser.RULE_program
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.enterProgram(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.exitProgram(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StubsParserVisitor {
			    return visitor.visitProgram(self)
			}
			else if let visitor = visitor as? StubsParserBaseVisitor {
			    return visitor.visitProgram(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func program() throws -> ProgramContext {
		var _localctx: ProgramContext = ProgramContext(_ctx, getState())
		try enterRule(_localctx, 0, StubsParser.RULE_program)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(61)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StubsParser.Tokens.Object.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(60)
		 		try objectDeclaration()

		 	}

		 	setState(63)
		 	try match(StubsParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ObjectDeclarationContext: ParserRuleContext {
			open
			func Object() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Object.rawValue, 0)
			}
			open
			func objectIdentifier() -> ObjectIdentifierContext? {
				return getRuleContext(ObjectIdentifierContext.self, 0)
			}
			open
			func objectBody() -> ObjectBodyContext? {
				return getRuleContext(ObjectBodyContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StubsParser.RULE_objectDeclaration
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.enterObjectDeclaration(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.exitObjectDeclaration(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StubsParserVisitor {
			    return visitor.visitObjectDeclaration(self)
			}
			else if let visitor = visitor as? StubsParserBaseVisitor {
			    return visitor.visitObjectDeclaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func objectDeclaration() throws -> ObjectDeclarationContext {
		var _localctx: ObjectDeclarationContext = ObjectDeclarationContext(_ctx, getState())
		try enterRule(_localctx, 2, StubsParser.RULE_objectDeclaration)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(65)
		 	try match(StubsParser.Tokens.Object.rawValue)
		 	setState(66)
		 	try objectIdentifier()
		 	setState(67)
		 	try objectBody()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ObjectBodyContext: ParserRuleContext {
			open
			func CurlyBracketOpen() -> TerminalNode? {
				return getToken(StubsParser.Tokens.CurlyBracketOpen.rawValue, 0)
			}
			open
			func CurlyBracketClose() -> TerminalNode? {
				return getToken(StubsParser.Tokens.CurlyBracketClose.rawValue, 0)
			}
			open
			func variableDeclaration() -> [VariableDeclarationContext] {
				return getRuleContexts(VariableDeclarationContext.self)
			}
			open
			func variableDeclaration(_ i: Int) -> VariableDeclarationContext? {
				return getRuleContext(VariableDeclarationContext.self, i)
			}
			open
			func functionDeclaration() -> [FunctionDeclarationContext] {
				return getRuleContexts(FunctionDeclarationContext.self)
			}
			open
			func functionDeclaration(_ i: Int) -> FunctionDeclarationContext? {
				return getRuleContext(FunctionDeclarationContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return StubsParser.RULE_objectBody
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.enterObjectBody(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.exitObjectBody(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StubsParserVisitor {
			    return visitor.visitObjectBody(self)
			}
			else if let visitor = visitor as? StubsParserBaseVisitor {
			    return visitor.visitObjectBody(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func objectBody() throws -> ObjectBodyContext {
		var _localctx: ObjectBodyContext = ObjectBodyContext(_ctx, getState())
		try enterRule(_localctx, 4, StubsParser.RULE_objectBody)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(69)
		 	try match(StubsParser.Tokens.CurlyBracketOpen.rawValue)
		 	setState(73)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StubsParser.Tokens.Var.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(70)
		 		try variableDeclaration()


		 		setState(75)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(79)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StubsParser.Tokens.Def.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(76)
		 		try functionDeclaration()


		 		setState(81)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(82)
		 	try match(StubsParser.Tokens.CurlyBracketClose.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ObjectIdentifierContext: ParserRuleContext {
			open
			func Identifier() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Identifier.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StubsParser.RULE_objectIdentifier
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.enterObjectIdentifier(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.exitObjectIdentifier(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StubsParserVisitor {
			    return visitor.visitObjectIdentifier(self)
			}
			else if let visitor = visitor as? StubsParserBaseVisitor {
			    return visitor.visitObjectIdentifier(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func objectIdentifier() throws -> ObjectIdentifierContext {
		var _localctx: ObjectIdentifierContext = ObjectIdentifierContext(_ctx, getState())
		try enterRule(_localctx, 6, StubsParser.RULE_objectIdentifier)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(84)
		 	try match(StubsParser.Tokens.Identifier.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class DatatypeContext: ParserRuleContext {
			open
			func NativeType() -> TerminalNode? {
				return getToken(StubsParser.Tokens.NativeType.rawValue, 0)
			}
			open
			func Array() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Array.rawValue, 0)
			}
			open
			func BracketOpen() -> TerminalNode? {
				return getToken(StubsParser.Tokens.BracketOpen.rawValue, 0)
			}
			open
			func BracketClose() -> TerminalNode? {
				return getToken(StubsParser.Tokens.BracketClose.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StubsParser.RULE_datatype
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.enterDatatype(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.exitDatatype(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StubsParserVisitor {
			    return visitor.visitDatatype(self)
			}
			else if let visitor = visitor as? StubsParserBaseVisitor {
			    return visitor.visitDatatype(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func datatype() throws -> DatatypeContext {
		var _localctx: DatatypeContext = DatatypeContext(_ctx, getState())
		try enterRule(_localctx, 8, StubsParser.RULE_datatype)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(91)
		 	try _errHandler.sync(self)
		 	switch (StubsParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .NativeType:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(86)
		 		try match(StubsParser.Tokens.NativeType.rawValue)

		 		break

		 	case .Array:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(87)
		 		try match(StubsParser.Tokens.Array.rawValue)
		 		setState(88)
		 		try match(StubsParser.Tokens.BracketOpen.rawValue)
		 		setState(89)
		 		try match(StubsParser.Tokens.NativeType.rawValue)
		 		setState(90)
		 		try match(StubsParser.Tokens.BracketClose.rawValue)

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class VariableDeclarationContext: ParserRuleContext {
			open
			func Var() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Var.rawValue, 0)
			}
			open
			func variableIdentifier() -> VariableIdentifierContext? {
				return getRuleContext(VariableIdentifierContext.self, 0)
			}
			open
			func Colon() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Colon.rawValue, 0)
			}
			open
			func datatype() -> DatatypeContext? {
				return getRuleContext(DatatypeContext.self, 0)
			}
			open
			func Assign() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Assign.rawValue, 0)
			}
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
			open
			func Semicolon() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Semicolon.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StubsParser.RULE_variableDeclaration
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.enterVariableDeclaration(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.exitVariableDeclaration(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StubsParserVisitor {
			    return visitor.visitVariableDeclaration(self)
			}
			else if let visitor = visitor as? StubsParserBaseVisitor {
			    return visitor.visitVariableDeclaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func variableDeclaration() throws -> VariableDeclarationContext {
		var _localctx: VariableDeclarationContext = VariableDeclarationContext(_ctx, getState())
		try enterRule(_localctx, 10, StubsParser.RULE_variableDeclaration)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(93)
		 	try match(StubsParser.Tokens.Var.rawValue)
		 	setState(94)
		 	try variableIdentifier()
		 	setState(95)
		 	try match(StubsParser.Tokens.Colon.rawValue)
		 	setState(96)
		 	try datatype()
		 	setState(97)
		 	try match(StubsParser.Tokens.Assign.rawValue)
		 	setState(98)
		 	try expression()
		 	setState(99)
		 	try match(StubsParser.Tokens.Semicolon.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class VariableAssignmentContext: ParserRuleContext {
			open
			func variableIdentifier() -> VariableIdentifierContext? {
				return getRuleContext(VariableIdentifierContext.self, 0)
			}
			open
			func Assign() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Assign.rawValue, 0)
			}
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
			open
			func Semicolon() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Semicolon.rawValue, 0)
			}
			open
			func ParenOpen() -> TerminalNode? {
				return getToken(StubsParser.Tokens.ParenOpen.rawValue, 0)
			}
			open
			func additiveExpression() -> AdditiveExpressionContext? {
				return getRuleContext(AdditiveExpressionContext.self, 0)
			}
			open
			func ParenClose() -> TerminalNode? {
				return getToken(StubsParser.Tokens.ParenClose.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StubsParser.RULE_variableAssignment
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.enterVariableAssignment(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.exitVariableAssignment(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StubsParserVisitor {
			    return visitor.visitVariableAssignment(self)
			}
			else if let visitor = visitor as? StubsParserBaseVisitor {
			    return visitor.visitVariableAssignment(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func variableAssignment() throws -> VariableAssignmentContext {
		var _localctx: VariableAssignmentContext = VariableAssignmentContext(_ctx, getState())
		try enterRule(_localctx, 12, StubsParser.RULE_variableAssignment)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(101)
		 	try variableIdentifier()
		 	setState(106)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StubsParser.Tokens.ParenOpen.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(102)
		 		try match(StubsParser.Tokens.ParenOpen.rawValue)
		 		setState(103)
		 		try additiveExpression(0)
		 		setState(104)
		 		try match(StubsParser.Tokens.ParenClose.rawValue)

		 	}

		 	setState(108)
		 	try match(StubsParser.Tokens.Assign.rawValue)
		 	setState(109)
		 	try expression()
		 	setState(110)
		 	try match(StubsParser.Tokens.Semicolon.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class VariableIdentifierContext: ParserRuleContext {
			open
			func Identifier() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Identifier.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StubsParser.RULE_variableIdentifier
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.enterVariableIdentifier(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.exitVariableIdentifier(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StubsParserVisitor {
			    return visitor.visitVariableIdentifier(self)
			}
			else if let visitor = visitor as? StubsParserBaseVisitor {
			    return visitor.visitVariableIdentifier(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func variableIdentifier() throws -> VariableIdentifierContext {
		var _localctx: VariableIdentifierContext = VariableIdentifierContext(_ctx, getState())
		try enterRule(_localctx, 14, StubsParser.RULE_variableIdentifier)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(112)
		 	try match(StubsParser.Tokens.Identifier.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FunctionDeclarationContext: ParserRuleContext {
			open
			func Def() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Def.rawValue, 0)
			}
			open
			func functionIdentifier() -> FunctionIdentifierContext? {
				return getRuleContext(FunctionIdentifierContext.self, 0)
			}
			open
			func ParenOpen() -> TerminalNode? {
				return getToken(StubsParser.Tokens.ParenOpen.rawValue, 0)
			}
			open
			func ParenClose() -> TerminalNode? {
				return getToken(StubsParser.Tokens.ParenClose.rawValue, 0)
			}
			open
			func Assign() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Assign.rawValue, 0)
			}
			open
			func functionBody() -> FunctionBodyContext? {
				return getRuleContext(FunctionBodyContext.self, 0)
			}
			open
			func functionDeclarationArgumentList() -> FunctionDeclarationArgumentListContext? {
				return getRuleContext(FunctionDeclarationArgumentListContext.self, 0)
			}
			open
			func Colon() -> TerminalNode? {
				return getToken(StubsParser.Tokens.Colon.rawValue, 0)
			}
			open
			func datatype() -> DatatypeContext? {
				return getRuleContext(DatatypeContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StubsParser.RULE_functionDeclaration
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.enterFunctionDeclaration(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.exitFunctionDeclaration(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StubsParserVisitor {
			    return visitor.visitFunctionDeclaration(self)
			}
			else if let visitor = visitor as? StubsParserBaseVisitor {
			    return visitor.visitFunctionDeclaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func functionDeclaration() throws -> FunctionDeclarationContext {
		var _localctx: FunctionDeclarationContext = FunctionDeclarationContext(_ctx, getState())
		try enterRule(_localctx, 16, StubsParser.RULE_functionDeclaration)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(114)
		 	try match(StubsParser.Tokens.Def.rawValue)
		 	setState(115)
		 	try functionIdentifier()
		 	setState(116)
		 	try match(StubsParser.Tokens.ParenOpen.rawValue)
		 	setState(118)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StubsParser.Tokens.Identifier.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(117)
		 		try functionDeclarationArgumentList()

		 	}

		 	setState(120)
		 	try match(StubsParser.Tokens.ParenClose.rawValue)
		 	setState(123)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StubsParser.Tokens.Colon.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(121)
		 		try match(StubsParser.Tokens.Colon.rawValue)
		 		setState(122)
		 		try datatype()

		 	}

		 	setState(125)
		 	try match(StubsParser.Tokens.Assign.rawValue)
		 	setState(126)
		 	try functionBody()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FunctionDeclarationArgumentListContext: ParserRuleContext {
			open
			func variableIdentifier() -> [VariableIdentifierContext] {
				return getRuleContexts(VariableIdentifierContext.self)
			}
			open
			func variableIdentifier(_ i: Int) -> VariableIdentifierContext? {
				return getRuleContext(VariableIdentifierContext.self, i)
			}
			open
			func Colon() -> [TerminalNode] {
				return getTokens(StubsParser.Tokens.Colon.rawValue)
			}
			open
			func Colon(_ i:Int) -> TerminalNode? {
				return getToken(StubsParser.Tokens.Colon.rawValue, i)
			}
			open
			func datatype() -> [DatatypeContext] {
				return getRuleContexts(DatatypeContext.self)
			}
			open
			func datatype(_ i: Int) -> DatatypeContext? {
				return getRuleContext(DatatypeContext.self, i)
			}
			open
			func Seperator() -> [TerminalNode] {
				return getTokens(StubsParser.Tokens.Seperator.rawValue)
			}
			open
			func Seperator(_ i:Int) -> TerminalNode? {
				return getToken(StubsParser.Tokens.Seperator.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return StubsParser.RULE_functionDeclarationArgumentList
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.enterFunctionDeclarationArgumentList(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? StubsParserListener {
				listener.exitFunctionDeclarationArgumentList(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StubsParserVisitor {
			    return visitor.visitFunctionDeclarationArgumentList(self)
			}
			else if let visitor = visitor as? StubsParserBaseVisitor {
			    return visitor.visitFunctionDeclarationArgumentList(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func functionDeclarationArgumentList() throws -> FunctionDeclarationArgumentListContext {
		var _localctx: FunctionDeclarationArgumentListContext = FunctionDeclarationArgumentListContext(_ctx, getState())
		try enterRule(_localctx, 18, StubsParser.RULE_functionDeclarationArgumentList)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(128)
		 	try variableIdentifier()
		 	setState(129)
		 	try match(StubsParser.Tokens.Colon.rawValue)
		 	setState(130)
		 	try datatype()
		 	setState(138)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StubsParser.Tokens.Seperator.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(131)
		 		try match(StubsParser.Tokens.Seperator.rawValue)
		 		setState(132)
		 		try variableIdentifier()
		 		setState(133)
		 		try match(StubsParser.Tokens.Colon.rawValue)
		 		setState(134)
		 		try datatype()


		 		setState(140)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
